[package]
name = "meowth"
version = "0.0.2"
authors = ["Šarūnas Navickas"]

[features]
# zMQ consumer is built by default
default = ["tcp"]

zmq = []
tcp = []

[dependencies]
meowth_lib = { path = "lib" }

# ElasticSearch dependencies
time = "0.1.38"
log = "0.3"
env_logger = "0.4.3"
yaml-rust = "0.4.0"
getopts = "0.2.15"
hostname = "0.1.3"

statsd = "0.10.0"

# ElasticSearch dependencies
elastic = "0.20.5"
